update driver, add base page, update tests